--- a/server/更版流程.md
+++ b/server/更版流程.md
@@ -11,7 +11,22 @@
 		- 3 commit
 		- 4 deploy demo
 		- 5 deploy dev
+	- ./menu_test_operation.sh
+		- 1 stop
+		- 2 deploy
+		- 3 down
+		- 4 start
+		- 5 status
+		- 6 version
 	- ./menu_pro_operation.sh
+		- 1 copy
+		- 2 stop
+		- 3 deploy
+		- 4 down
+		- 5 start
+		- 6 status
+		- 7 version
+	- ./menu_pro_operation_kg.sh
 		- 1 copy
 		- 2 stop
 		- 3 deploy
